--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,9 @@ restore-app-image: &restore-app-image
     name: Restore app image
     command: docker load -i app-image.tar
 
+java-docker: &java-docker
+  docker:
+    - image: circleci/openjdk:11
 
 jobs:
   checkout:
@@ -37,8 +40,7 @@ jobs:
 
   backend-install:
     <<: *defaults
-    docker:
-      - image: circleci/openjdk:11
+    <<: *java-docker
     steps:
       - *attach-workspace
       - restore_cache:
@@ -74,12 +76,16 @@ jobs:
 
   backend-unit-tests:
     <<: *defaults
-    machine: true
+    machine:
+      image: ubuntu-1604:201903-01
     environment:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
     steps:
       - *attach-workspace
+      - run:
+          name: Install Java 11
+          command: .circleci/install_java11.sh
       - run:
           name: Start mongo & rabbit
           command: .circleci/run_compose.sh up -d mongo rabbit
@@ -102,7 +108,6 @@ jobs:
       - run:
           name: Install Java 11
           command: .circleci/install_java11.sh
-      - run: java -version
       - run:
           name: Start app
           command: .circleci/run_compose.sh up -d
@@ -114,7 +119,8 @@ jobs:
 
   dashboard-tests:
     <<: *defaults
-    machine: true
+    machine:
+      image: ubuntu-1604:201903-01
     steps:
       - *attach-workspace
       - *restore-app-image
@@ -137,7 +143,8 @@ jobs:
 
   sandbox-tests:
     <<: *defaults
-    machine: true
+    machine:
+      image: ubuntu-1604:201903-01
     environment:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
@@ -164,8 +171,7 @@ jobs:
 
   heroku-deploy:
     <<: *defaults
-    docker:
-      - image: circleci/openjdk:11
+    <<: *java-docker
     steps:
       - setup_remote_docker
       - *attach-workspace
@@ -180,8 +186,7 @@ jobs:
 
   dockerhub-publish-master:
     <<: *defaults
-    docker:
-      - image: circleci/openjdk:11
+    <<: *java-docker
     steps:
       - setup_remote_docker
       - *attach-workspace
@@ -192,8 +197,7 @@ jobs:
 
   dockerhub-publish:
     <<: *defaults
-    docker:
-      - image: circleci/openjdk:11
+    <<: *java-docker
     steps:
       - setup_remote_docker
       - *attach-workspace
