--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,8 +76,12 @@ jobs:
 
   backend-unit-tests:
     <<: *defaults
-    machine:
-      image: ubuntu-1604:201903-01
+    docker:
+      - image: circleci/openjdk:11
+      - image: rabbitmq:3-management-alpine
+        hostname: ticktok-rabbit
+      - image: mongo:3.6
+        command: --storageEngine ephemeralForTest
     environment:
       JVM_OPTS: -Xmx3200m
       TERM: dumb
