--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
-    ext.kotlinVersion = '1.3.70'
+    ext.kotlinVersion = '1.4.10'
     ext.cache2kVersion = '1.2.4.Final'
     ext.swaggerVersion = '2.8.0'
-    ext.lombokVersion = '1.18.12'
+    ext.lombokVersion = '1.18.16'
     repositories {
         mavenCentral()
         jcenter()
@@ -17,10 +17,9 @@ buildscript {
 plugins {
     id 'java'
     id 'idea'
-    id 'org.springframework.boot' version '2.2.4.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.springframework.boot' version '2.3.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'org.jetbrains.kotlin.jvm' version '1.3.70'
-    id 'com.gradle.build-scan' version '2.4.2'
 }
 
 
@@ -80,12 +79,11 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
 
     // JUnit 5
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-params:5.3.2'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter:5.7.0"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-params:5.7.0'
 
     testCompile "org.hamcrest:hamcrest-all:1.3"
-    testCompile "org.mockito:mockito-core:2.15.0"
+    testCompile "org.mockito:mockito-core:3.5.15"
 
     //Spring
     testCompile "org.springframework.boot:spring-boot-starter-test"
