--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,7 +80,6 @@ jobs:
     docker:
       - image: circleci/openjdk:11
       - image: rabbitmq:3-management-alpine
-        hostname: ticktok-rabbit
       - image: mongo:3.6
         command: --storageEngine ephemeralForTest
     environment:
@@ -90,7 +89,7 @@ jobs:
       - *attach-workspace
       - run:
           name: Server's UT & IT
-          command: ./gradlew test --tests test.*
+          command: ./gradlew test --tests "test.*"
       - store_test_results:
           path: build/test-results
 
