--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
       - *attach-workspace
       - run:
           name: Server's UT & IT
-          command: ./gradlew test --tests "test.*"
+          command: ./gradlew test --tests "test.*" -d
       - store_test_results:
           path: build/test-results
 
