--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,7 @@ jobs:
 
   backend-build:
     <<: *defaults
-    docker:
-      - image: circleci/openjdk:11
+    <<: *java-docker
     steps:
       - *attach-workspace
       - setup_remote_docker
@@ -78,7 +77,7 @@ jobs:
   backend-unit-tests:
     <<: *defaults
     docker:
-      - image: circleci/openjdk:11
+      - image: circleci/openjdk:11.0.3-jdk-stretch
       - image: rabbitmq:3-management-alpine
       - image: mongo:3.6
         command: --storageEngine ephemeralForTest
