--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,6 +79,8 @@ jobs:
     docker:
       - image: circleci/openjdk:11.0.3-jdk-stretch
       - image: rabbitmq:3-management-alpine
+        volumes:
+          - rabbit_log:/var/log/rabbitmq/log
       - image: mongo:3.6
         command: --storageEngine ephemeralForTest
     environment:
