--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,9 +78,10 @@ jobs:
     <<: *defaults
     docker:
       - image: circleci/openjdk:11.0.3-jdk-stretch
-      - image: rabbitmq:3-management-alpine
-        volumes:
-          - ~/rabbit_log:/var/log/rabbitmq/log
+      - image: rabbitmq:latest
+        ports:
+          - "15672:15672"
+          - "5672:5672"
       - image: mongo:3.6
         command: --storageEngine ephemeralForTest
     environment:
