--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,7 @@ jobs:
 
   backend-build:
     <<: *defaults
-    docker:
-      - image: circleci/openjdk:11
+    <<: *java-docker
     steps:
       - *attach-workspace
       - setup_remote_docker
@@ -80,8 +79,7 @@ jobs:
     docker:
       - image: circleci/openjdk:11
       - image: rabbitmq:3-management-alpine
-        hostname: ticktok-rabbit
-      - image: mongo:3.6
+      - image: mongo:4.4
         command: --storageEngine ephemeralForTest
     environment:
       JVM_OPTS: -Xmx3200m
@@ -90,7 +88,7 @@ jobs:
       - *attach-workspace
       - run:
           name: Server's UT & IT
-          command: ./gradlew test --tests test.*
+          command: sleep 5 && ./gradlew test --tests "test.*"
       - store_test_results:
           path: build/test-results
 
