--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
@@ -16,10 +15,11 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'groovy'
     id 'idea'
     id 'org.springframework.boot' version '2.3.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
+    // id 'org.jetbrains.kotlin.jvm' version '1.3.70'
 }
 
 
@@ -76,6 +76,12 @@ dependencies {
 
 
     // ======================= Tests ==========================
+    implementation 'org.codehaus.groovy:groovy-all:3.0.6'
+    testCompile 'org.spockframework:spock-core:1.3-groovy-2.5'
+    testCompile 'org.awaitility:awaitility-groovy:4.0.3'
+    testCompile 'org.codehaus.groovy:http-builder:0.4.1'
+
+
     testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
 
     // JUnit 5
@@ -96,17 +102,17 @@ dependencies {
     testCompile "org.awaitility:awaitility-kotlin:4.0.2"
 }
 
-compileKotlin {
+/*compileKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-}
+}*/
 
-compileTestKotlin {
+/*compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-}
+}*/
 
 task copy_dashboard(type: Copy) {
     from "dashboard/build"
