--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
           command: .circleci/run_compose.sh up -d
       - run:
           name: E2E tests against dockered app
-          command: ./gradlew test -Ptags=core-tests -DstartApp=no --scan
+          command: ./gradlew test -Ptags=rabbit-broker -DstartApp=no --scan
       - store_test_results:
           path: build/test-results
 
@@ -156,7 +156,7 @@ jobs:
           command: .circleci/run_compose_sandbox.sh up -d app && sleep 10
       - run:
           name: Sandbox sanity testing
-          command: ./gradlew test -Ptags=http-broker-tests -DstartApp=no --scan
+          command: ./gradlew test -Ptags=http-broker -DstartApp=no --scan
       - run:
           name: Collect app logs
           command: mkdir /tmp/ticktok-artifacts && .circleci/run_compose.sh logs > /tmp/ticktok-artifacts/compose.logs
