--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,11 @@ dependencies {
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile "org.springframework.security:spring-security-test"
 
+    //Websocket
+    testImplementation "io.ktor:ktor-client-websockets:1.5.3"
+    testImplementation "io.ktor:ktor-client-core:1.5.3"
+    testImplementation "io.ktor:ktor-client-cio:1.5.3"
+
     //Other
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
